--- a/index.html
+++ b/index.html
@@ -18,21 +18,23 @@
 </head>
 <body>
     <div class="softframe">
-        <div class="sf1">
-            <h1> softframecss </h1>
-            <p>A simple framework CSS for simples applications.</p>
-        </div>
-        <div class="sf1">
-            <h1> softframecss </h1>
-            <p>A simple framework CSS for simples applications.</p>
-        </div>
-        <div class="sf1">
-            <h1> softframecss </h1>
-            <p>A simple framework CSS for simples applications.</p>
-        </div>
-        <div class="sf1">
-            <h1> softframecss </h1>
-            <p>A simple framework CSS for simples applications.</p>
+        <div class="sf">
+            <div class="sf1">
+                <h1> softframecss </h1>
+                <p>A simple framework CSS for simples applications.</p>
+            </div>
+            <div class="sf1">
+                <h1> softframecss </h1>
+                <p>A simple framework CSS for simples applications.</p>
+            </div>
+            <div class="sf1">
+                <h1> softframecss </h1>
+                <p>A simple framework CSS for simples applications.</p>
+            </div>
+            <div class="sf1">
+                <h1> softframecss </h1>
+                <p>A simple framework CSS for simples applications.</p>
+            </div>
         </div>
     </div>
 </body>
