mel: calculos de sistema de grid

--- a/index.html
+++ b/index.html
@@ -18,22 +18,53 @@
 </head>
 <body>
     <div class="softframe">
+        <!-- logo -->
         <div class="sf">
-            <div class="sf1">
-                <h1> softframecss </h1>
+            <div class="sf4">
+                <h1>softframe.css</h1>
                 <p>A simple framework CSS for simples applications.</p>
             </div>
-            <div class="sf1">
-                <h1> softframecss </h1>
-                <p>A simple framework CSS for simples applications.</p>
+            <div class="sf8"></div>
+        </div>
+
+        <!-- demo grids -->
+        <h2 class="text-center"> GRID with 12 columns </h2>
+        <div class="sf">
+            <div class="sf_card sf1">
+                <h3 class="text-center pf"> .sf1 </h3>
             </div>
-            <div class="sf1">
-                <h1> softframecss </h1>
-                <p>A simple framework CSS for simples applications.</p>
+            <div class="sf_card sf1">
+                <h3 class="text-center pf"> .sf1 </h3>
             </div>
-            <div class="sf1">
-                <h1> softframecss </h1>
-                <p>A simple framework CSS for simples applications.</p>
+            <div class="sf_card sf1">
+                <h3 class="text-center pf"> .sf1 </h3>
+            </div>
+            <div class="sf_card sf1">
+                <h3 class="text-center pf"> .sf1 </h3>
+            </div>
+            <div class="sf_card sf1">
+                <h3 class="text-center pf"> .sf1 </h3>
+            </div>
+            <div class="sf_card sf1">
+                <h3 class="text-center pf"> .sf1 </h3>
+            </div>
+            <div class="sf_card sf1">
+                <h3 class="text-center pf"> .sf1 </h3>
+            </div>
+            <div class="sf_card sf1">
+                <h3 class="text-center pf"> .sf1 </h3>
+            </div>
+            <div class="sf_card sf1">
+                <h3 class="text-center pf"> .sf1 </h3>
+            </div>
+            <div class="sf_card sf1">
+                <h3 class="text-center pf"> .sf1 </h3>
+            </div>
+            <div class="sf_card sf1">
+                <h3 class="text-center pf"> .sf1 </h3>
+            </div>
+            <div class="sf_card sf1">
+                <h3 class="text-center pf"> .sf1 </h3>
             </div>
         </div>
     </div>
