cor: add flex layout and readme

--- a/index.html
+++ b/index.html
@@ -12,23 +12,32 @@
     <link rel="manifest" href="icons/site.webmanifest">
 
     <link href="https://fonts.googleapis.com/css?family=Kulim+Park&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="css/softframe.css">
 
     <title>softframe.css | A simple framework CSS for simples applications.</title>
 </head>
 <body>
     <div class="softframe">
-        <!-- logo -->
         <div class="sf">
             <div class="sf4">
                 <h1>softframe.css</h1>
                 <p>A simple framework CSS for simples applications.</p>
             </div>
-            <div class="sf8"></div>
+            <div class="sf8">&nbsp;</div>
+        </div>
+        <div class="sf">
+            <div class="sf12">
+                <hr>
+            </div>
         </div>
 
-        <!-- demo grids -->
-        <h2 class="text-center"> GRID with 12 columns </h2>
+        <div class="sf">
+            <div class="sf12">
+                <h1><i class="material-icons"> pause </i>Grid</h1>
+            </div>
+        </div>
+
         <div class="sf">
             <div class="sf_card sf1">
                 <h3 class="text-center pf"> .sf1 </h3>
@@ -65,6 +74,90 @@
             </div>
             <div class="sf_card sf1">
                 <h3 class="text-center pf"> .sf1 </h3>
+            </div>
+        </div>
+
+        <div class="sf">
+            <div class="sf_card sf2">
+                <h3 class="text-center pf"> .sf2 </h3>
+            </div>
+            <div class="sf_card sf2">
+                <h3 class="text-center pf"> .sf2 </h3>
+            </div>
+            <div class="sf_card sf2">
+                <h3 class="text-center pf"> .sf2 </h3>
+            </div>
+            <div class="sf_card sf2">
+                <h3 class="text-center pf"> .sf2 </h3>
+            </div>
+            <div class="sf_card sf2">
+                <h3 class="text-center pf"> .sf2 </h3>
+            </div>
+            <div class="sf_card sf2">
+                <h3 class="text-center pf"> .sf2 </h3>
+            </div>
+        </div>
+
+        <div class="sf">
+            <div class="sf_card sf3">
+                <h3 class="text-center pf"> .sf3 </h3>
+            </div>
+            <div class="sf_card sf3">
+                <h3 class="text-center pf"> .sf3 </h3>
+            </div>
+            <div class="sf_card sf3">
+                <h3 class="text-center pf"> .sf3 </h3>
+            </div>
+            <div class="sf_card sf3">
+                <h3 class="text-center pf"> .sf3 </h3>
+            </div>
+        </div>
+
+        <div class="sf">
+            <div class="sf_card sf4">
+                <h3 class="text-center pf"> .sf4 </h3>
+            </div>
+            <div class="sf_card sf4">
+                <h3 class="text-center pf"> .sf4 </h3>
+            </div>
+            <div class="sf_card sf4">
+                <h3 class="text-center pf"> .sf4 </h3>
+            </div>
+        </div>
+
+        <div class="sf">
+            <div class="sf12">
+                <h1><i class="material-icons"> pause </i>Merged</h1>
+            </div>
+        </div>
+
+        <div class="sf">
+            <div class="sf_card sf7">
+                <h3 class="text-center pf"> .sf7</h3>
+            </div>
+            <div class="sf_card sf5">
+                <h3 class="text-center pf"> .sf5 </h3>
+            </div>
+        </div>
+
+        <div class="sf">
+            <div class="sf_card sf2">
+                <h3 class="text-center pf"> .sf2</h3>
+            </div>
+            <div class="sf_card sf5">
+                <h3 class="text-center pf"> .sf5 </h3>
+            </div>
+            <div class="sf_card sf1">
+                <h3 class="text-center pf"> .sf1 </h3>
+            </div>
+            <div class="sf_card sf4">
+                <h3 class="text-center pf"> .sf4 </h3>
+            </div>
+        </div>
+
+        <div class="sf footer">
+            <div class="sf12">
+                <p>Powered by <strong> <a href="https://www.linkedin.com/in/deyvisonborges"> Deyvison Borges </a></strong></p>
             </div>
         </div>
     </div>
