cor: link download

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <h1>softframe.css</h1>
                 <p>A simple framework CSS for simples applications.</p>
             </div>
-            <div class="sf8">&nbsp;</div>
+            <a class="link-download" href="https://github.com/softframecss/softframecss"> Download </a>
         </div>
         <div class="sf">
             <div class="sf12">
