mel: estrutura nova de grid e feature para navbar

--- a/index.html
+++ b/index.html
@@ -19,6 +19,14 @@
 </head>
 <body>
     <div class="softframe">
+       <!-- <nav class="sf sf_nav">
+            <ul>
+                <li>Home</li>
+                <li>Contribua para o projeto</li>
+            </ul>
+            <button class="sf_buttom light-gray"> Botão lindo</button>
+        </nav> -->
+
         <div class="sf">
             <div class="sf4">
                 <h1>softframe.css</h1>
@@ -31,7 +39,15 @@
                 <hr>
             </div>
         </div>
-
+        <div class="st" style="padding: 0 120px;">
+            <h1> This is text with <span class="sf_buttom light-gray">h1</span></h1>
+            <h2> This is text with <span class="sf_buttom light-gray">h2</span></h2>
+            <h3> This is text with <span class="sf_buttom light-gray">h3</span></h3>
+            <h4> This is text with <span class="sf_buttom light-gray">h4</span></h4>
+            <h5> This is text with <span class="sf_buttom light-gray">h5</span></h5>
+            <h6> This is text with <span class="sf_buttom light-gray">h6</span></h6>
+            <p>This is paragraphy <span class="sf_buttom light-gray">p</span></p>
+        </div>
         <div class="sf">
             <div class="sf12">
                 <h1><i class="material-icons"> pause </i>Grid</h1>
@@ -39,7 +55,7 @@
         </div>
 
         <div class="sf">
-            <div class="sf_card sf1">
+            <div class="softframe sf_card sf1">
                 <h3 class="text-center pf"> .sf1 </h3>
             </div>
             <div class="sf_card sf1">
@@ -155,7 +171,7 @@
             </div>
         </div>
 
-        <div class="sf footer">
+        <div class="sf sf_footer">
             <div class="sf12">
                 <p>Powered by <strong> <a href="https://www.linkedin.com/in/deyvisonborges"> Deyvison Borges </a></strong></p>
             </div>
