cor: feature modal, buttoms

--- a/index.html
+++ b/index.html
@@ -39,18 +39,39 @@
                 <hr>
             </div>
         </div>
-        <div class="st" style="padding: 0 120px;">
-            <h1> This is text with <span class="sf_buttom light-gray">h1</span></h1>
-            <h2> This is text with <span class="sf_buttom light-gray">h2</span></h2>
-            <h3> This is text with <span class="sf_buttom light-gray">h3</span></h3>
-            <h4> This is text with <span class="sf_buttom light-gray">h4</span></h4>
-            <h5> This is text with <span class="sf_buttom light-gray">h5</span></h5>
-            <h6> This is text with <span class="sf_buttom light-gray">h6</span></h6>
-            <p>This is paragraphy <span class="sf_buttom light-gray">p</span></p>
+        <div class="sf">
+            <div class="st">
+                <h1> This is text with <span class="sf_buttom light-gray">h1</span></h1>
+                <h2> This is text with <span class="sf_buttom light-gray">h2</span></h2>
+                <h3> This is text with <span class="sf_buttom light-gray">h3</span></h3>
+                <h4> This is text with <span class="sf_buttom light-gray">h4</span></h4>
+                <h5> This is text with <span class="sf_buttom light-gray">h5</span></h5>
+                <h6> This is text with <span class="sf_buttom light-gray">h6</span></h6>
+                <p>This is paragraphy <span class="sf_buttom light-gray">p</span></p>
+            </div>
         </div>
         <div class="sf">
             <div class="sf12">
-                <h1><i class="material-icons"> pause </i>Grid</h1>
+                <hr>
+            </div>
+        </div>
+        <br>
+        <div class="sf">
+            <div class="sf12">
+                <button class="sf_buttom light-gray"> buttom </button>
+                <button class="sf_buttom dark-gray"> buttom </button>
+                <button class="sf_buttom black"> buttom </button>
+            </div>
+        </div>
+        <br>
+        <div class="sf">
+            <div class="sf12">
+                <hr>
+            </div>
+        </div>
+        <div class="sf">
+            <div class="sf12">
+                <h1><i class="material-icons"> pause </i> layout</h1>
             </div>
         </div>
 
@@ -143,7 +164,7 @@
 
         <div class="sf">
             <div class="sf12">
-                <h1><i class="material-icons"> pause </i>Merged</h1>
+                <h1><i class="material-icons"> pause </i>merged</h1>
             </div>
         </div>
 
@@ -168,6 +189,18 @@
             </div>
             <div class="sf_card sf4">
                 <h3 class="text-center pf"> .sf4 </h3>
+            </div>
+        </div>
+
+        <div class="sf"> <!-- modal -->
+            <label class="sf_buttom" for="modal">Open modal</label>
+            <input class="sf_modal_state" id="modal" type="checkbox" hidden>
+            <div class="sf_modal">
+                <label class="sf_modal_bg" for="modal"></label>
+                <div class="sf_modal_inner">
+                  <label class="sf_modal_close" for="modal"></label>
+                    <h2>Sleppy sloth</h2>
+                </div>
             </div>
         </div>
 
