--- a/index.html
+++ b/index.html
@@ -191,9 +191,9 @@
                 <h3 class="text-center pf"> .sf4 </h3>
             </div>
         </div>
-
+        <br>
         <div class="sf"> <!-- modal -->
-            <label class="sf_buttom" for="modal">Open modal</label>
+            <label class="sf_buttom dark-gray" for="modal">Open modal</label>
             <input class="sf_modal_state" id="modal" type="checkbox" hidden>
             <div class="sf_modal">
                 <label class="sf_modal_bg" for="modal"></label>
