mel: support media queria breakpoint 320px

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html lang="en">
+<html lang="pt_BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,9 +13,9 @@
 
     <link href="https://fonts.googleapis.com/css?family=Kulim+Park&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="css/softframe.css">
+    <link href="css/softframe.css" rel="stylesheet">
 
-    <title>softframe.css | A simple framework CSS for simples applications.</title>
+    <title>softframe.css | A simple framework CSS for simple applications.</title>
 </head>
 <body>
     <div class="softframe">
@@ -199,7 +199,10 @@
                 <label class="sf_modal_bg" for="modal"></label>
                 <div class="sf_modal_inner">
                   <label class="sf_modal_close" for="modal"></label>
-                    <h2>Sleppy sloth</h2>
+                    <h2>Hello, i'm modal</h2>
+                    <p>
+                        this project is Brazilian
+                    </p>
                 </div>
             </div>
         </div>
