--- a/index.html
+++ b/index.html
@@ -19,14 +19,6 @@
 </head>
 <body>
     <div class="softframe">
-       <!-- <nav class="sf sf_nav">
-            <ul>
-                <li>Home</li>
-                <li>Contribua para o projeto</li>
-            </ul>
-            <button class="sf_buttom light-gray"> Botão lindo</button>
-        </nav> -->
-
         <div class="sf">
             <div class="sf4">
                 <h1>softframe.css</h1>
@@ -76,7 +68,7 @@
         </div>
 
         <div class="sf">
-            <div class="softframe sf_card sf1">
+            <div class="sf_card sf1">
                 <h3 class="text-center pf"> .sf1 </h3>
             </div>
             <div class="sf_card sf1">
