mel: new buttons

--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
                 <button class="sf_buttom light-gray"> buttom </button>
                 <button class="sf_buttom dark-gray"> buttom </button>
                 <button class="sf_buttom black"> buttom </button>
+                <button class="sf_buttom success"> buttom </button>
+                <button class="sf_buttom danger"> buttom </button>
+                <button class="sf_buttom warning"> buttom </button>
             </div>
         </div>
         <br>
