mel: support soft paddings

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html lang="pt_BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,6 +18,7 @@
 
     <title>softframe.css | A simple framework CSS for simple applications.</title>
 </head>
+
 <body>
     <div class="softframe">
         <div class="sf">
@@ -31,6 +33,12 @@
                 <hr>
             </div>
         </div>
+
+        <div class="sf">
+            <div class="sf12">
+                <h1><i class="material-icons"> pause </i>text</h1>
+            </div>
+        </div>
         <div class="sf">
             <div class="st">
                 <h1> This is text with <span class="sf_buttom light-gray">h1</span></h1>
@@ -42,12 +50,13 @@
                 <p>This is paragraphy <span class="sf_buttom light-gray">p</span></p>
             </div>
         </div>
+        <br>
+
         <div class="sf">
             <div class="sf12">
-                <hr>
+                <h1><i class="material-icons"> pause </i>buttons</h1>
             </div>
         </div>
-        <br>
         <div class="sf">
             <div class="sf12">
                 <button class="sf_buttom light-gray"> buttom </button>
@@ -59,101 +68,96 @@
             </div>
         </div>
         <br>
-        <div class="sf">
-            <div class="sf12">
-                <hr>
-            </div>
-        </div>
+
         <div class="sf">
             <div class="sf12">
                 <h1><i class="material-icons"> pause </i> layout</h1>
             </div>
         </div>
-
         <div class="sf">
             <div class="sf_card sf1">
-                <h3 class="text-center pf"> .sf1 </h3>
+                <h3 class="text-center ps5"> .sf1 </h3>
             </div>
             <div class="sf_card sf1">
-                <h3 class="text-center pf"> .sf1 </h3>
+                <h3 class="text-center ps5"> .sf1 </h3>
             </div>
             <div class="sf_card sf1">
-                <h3 class="text-center pf"> .sf1 </h3>
+                <h3 class="text-center ps5"> .sf1 </h3>
             </div>
             <div class="sf_card sf1">
-                <h3 class="text-center pf"> .sf1 </h3>
+                <h3 class="text-center ps5"> .sf1 </h3>
             </div>
             <div class="sf_card sf1">
-                <h3 class="text-center pf"> .sf1 </h3>
+                <h3 class="text-center ps5"> .sf1 </h3>
             </div>
             <div class="sf_card sf1">
-                <h3 class="text-center pf"> .sf1 </h3>
+                <h3 class="text-center ps5"> .sf1 </h3>
             </div>
             <div class="sf_card sf1">
-                <h3 class="text-center pf"> .sf1 </h3>
+                <h3 class="text-center ps5"> .sf1 </h3>
             </div>
             <div class="sf_card sf1">
-                <h3 class="text-center pf"> .sf1 </h3>
+                <h3 class="text-center ps5"> .sf1 </h3>
             </div>
             <div class="sf_card sf1">
-                <h3 class="text-center pf"> .sf1 </h3>
+                <h3 class="text-center ps5"> .sf1 </h3>
             </div>
             <div class="sf_card sf1">
-                <h3 class="text-center pf"> .sf1 </h3>
+                <h3 class="text-center ps5"> .sf1 </h3>
             </div>
             <div class="sf_card sf1">
-                <h3 class="text-center pf"> .sf1 </h3>
+                <h3 class="text-center ps5"> .sf1 </h3>
             </div>
             <div class="sf_card sf1">
-                <h3 class="text-center pf"> .sf1 </h3>
+                <h3 class="text-center ps5"> .sf1 </h3>
             </div>
         </div>
 
         <div class="sf">
             <div class="sf_card sf2">
-                <h3 class="text-center pf"> .sf2 </h3>
+                <h3 class="text-center ps5"> sf2 </h3>
             </div>
             <div class="sf_card sf2">
-                <h3 class="text-center pf"> .sf2 </h3>
+                <h3 class="text-center ps5"> sf2 </h3>
             </div>
             <div class="sf_card sf2">
-                <h3 class="text-center pf"> .sf2 </h3>
+                <h3 class="text-center ps5"> sf2 </h3>
             </div>
             <div class="sf_card sf2">
-                <h3 class="text-center pf"> .sf2 </h3>
+                <h3 class="text-center ps5"> sf2 </h3>
             </div>
             <div class="sf_card sf2">
-                <h3 class="text-center pf"> .sf2 </h3>
+                <h3 class="text-center ps5"> sf2 </h3>
             </div>
             <div class="sf_card sf2">
-                <h3 class="text-center pf"> .sf2 </h3>
+                <h3 class="text-center ps5"> sf2 </h3>
             </div>
         </div>
 
         <div class="sf">
             <div class="sf_card sf3">
-                <h3 class="text-center pf"> .sf3 </h3>
+                <h3 class="text-center ps5"> sf3 </h3>
             </div>
             <div class="sf_card sf3">
-                <h3 class="text-center pf"> .sf3 </h3>
+                <h3 class="text-center ps5"> sf3 </h3>
             </div>
             <div class="sf_card sf3">
-                <h3 class="text-center pf"> .sf3 </h3>
+                <h3 class="text-center ps5"> sf3 </h3>
             </div>
             <div class="sf_card sf3">
-                <h3 class="text-center pf"> .sf3 </h3>
+                <h3 class="text-center ps5"> sf3 </h3>
             </div>
         </div>
 
         <div class="sf">
             <div class="sf_card sf4">
-                <h3 class="text-center pf"> .sf4 </h3>
+                <h3 class="text-center ps5"> sf4 </h3>
             </div>
             <div class="sf_card sf4">
-                <h3 class="text-center pf"> .sf4 </h3>
+                <h3 class="text-center ps5"> sf4 </h3>
             </div>
             <div class="sf_card sf4">
-                <h3 class="text-center pf"> .sf4 </h3>
+                <h3 class="text-center ps5"> sf4 </h3>
             </div>
         </div>
 
@@ -165,35 +169,70 @@
 
         <div class="sf">
             <div class="sf_card sf7">
-                <h3 class="text-center pf"> .sf7</h3>
+                <h3 class="text-center ps5"> sf7</h3>
             </div>
             <div class="sf_card sf5">
-                <h3 class="text-center pf"> .sf5 </h3>
+                <h3 class="text-center ps5"> sf5 </h3>
             </div>
         </div>
 
         <div class="sf">
             <div class="sf_card sf2">
-                <h3 class="text-center pf"> .sf2</h3>
+                <h3 class="text-center ps5"> sf2</h3>
             </div>
             <div class="sf_card sf5">
-                <h3 class="text-center pf"> .sf5 </h3>
+                <h3 class="text-center ps5"> sf5 </h3>
             </div>
             <div class="sf_card sf1">
-                <h3 class="text-center pf"> .sf1 </h3>
+                <h3 class="text-center ps5"> sf1 </h3>
             </div>
             <div class="sf_card sf4">
-                <h3 class="text-center pf"> .sf4 </h3>
+                <h3 class="text-center ps5"> sf4 </h3>
             </div>
         </div>
         <br>
-        <div class="sf"> <!-- modal -->
+
+        <div class="sf">
+            <div class="sf12">
+                <h1><i class="material-icons"> feature </i>soft paddings</h1>
+            </div>
+        </div>
+        <div class="sf">
+            <div class="sf12">
+                <p> Fast expirience with the <strong>soft paddings</strong></p>
+                <p>Using in alls elemens and enjoy.</p>
+                <p class="ps5 dark-gray">
+                    <span class="light-gray ps2">This is padding with 5px</span>
+                </p>
+                <p class="ps10 dark-gray">
+                    <span class="light-gray ps2">This is padding with 10px</span>
+                </p>
+                <p class="ps15 dark-gray">
+                    <span class="light-gray ps2">This is padding with 15px</span>
+                </p>
+                <p class="ps20 dark-gray">
+                    <span class="light-gray ps2">This is padding with 20px</span>
+                </p>
+                <p class="ps25 dark-gray">
+                    <span class="light-gray ps2">This is padding with 25px</span>
+                </p>
+                <p class="ps30 dark-gray">
+                    <span class="light-gray ps2">This is padding with 30px</span>
+                </p>
+                <p class="ps40 dark-gray">
+                    <span class="light-gray ps2">This is padding with 40px</span>
+                </p>
+            </div>
+        </div>
+    
+        <div class="sf">
+            <!-- modal -->
             <label class="sf_buttom dark-gray" for="modal">Open modal</label>
             <input class="sf_modal_state" id="modal" type="checkbox" hidden>
             <div class="sf_modal">
                 <label class="sf_modal_bg" for="modal"></label>
                 <div class="sf_modal_inner">
-                  <label class="sf_modal_close" for="modal"></label>
+                    <label class="sf_modal_close" for="modal"></label>
                     <h2>Hello, i'm modal</h2>
                     <p>
                         this project is Brazilian
@@ -204,9 +243,11 @@
 
         <div class="sf sf_footer">
             <div class="sf12">
-                <p>Powered by <strong> <a href="https://www.linkedin.com/in/deyvisonborges"> Deyvison Borges </a></strong></p>
+                <p>Powered by <strong> <a href="https://www.linkedin.com/in/deyvisonborges"> Deyvison Borges
+                        </a></strong></p>
             </div>
         </div>
     </div>
 </body>
+
 </html>
