mel: link download and footer

--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
                 <h1>softframe.css</h1>
                 <p>A simple framework CSS for simples applications.</p>
             </div>
-            <a class="link-download" href="https://github.com/softframecss/softframecss"> Download </a>
+            <a class="link-download" href="https://github.com/softframecss/softframecss"> 
+                <span><i class="material-icons text-center">play_for_work</i></span>
+            </a>
         </div>
         <div class="sf">
             <div class="sf12">
@@ -36,7 +38,7 @@
 
         <div class="sf">
             <div class="sf12">
-                <h1><i class="material-icons"> pause </i>text</h1>
+                <h1><i class="material-icons"> last_page </i>text</h1>
             </div>
         </div>
         <div class="sf">
@@ -54,7 +56,7 @@
 
         <div class="sf">
             <div class="sf12">
-                <h1><i class="material-icons"> pause </i>buttons</h1>
+                <h1><i class="material-icons"> last_page </i>buttons</h1>
             </div>
         </div>
         <div class="sf">
@@ -71,7 +73,7 @@
 
         <div class="sf">
             <div class="sf12">
-                <h1><i class="material-icons"> pause </i> layout</h1>
+                <h1><i class="material-icons"> last_page </i> layout</h1>
             </div>
         </div>
         <div class="sf">
@@ -163,7 +165,7 @@
 
         <div class="sf">
             <div class="sf12">
-                <h1><i class="material-icons"> pause </i>merged</h1>
+                <h1><i class="material-icons"> last_page </i>merged</h1>
             </div>
         </div>
 
@@ -243,8 +245,12 @@
 
         <div class="sf sf_footer">
             <div class="sf12">
-                <p>Powered by <strong> <a href="https://www.linkedin.com/in/deyvisonborges"> Deyvison Borges
-                        </a></strong></p>
+                <p> All rights reserved &copy; 2020</p>
+                <p>Powered by 
+                    <strong> 
+                        <a href="https://www.linkedin.com/in/deyvisonborges"> Deyvison Borges</a>
+                    </strong>
+                </p>
             </div>
         </div>
     </div>
