mel: support breadcrumb, new components and re-design

--- a/index.html
+++ b/index.html
@@ -73,6 +73,39 @@
 
         <div class="sf">
             <div class="sf12">
+                <h1><i class="material-icons"> last_page </i> badges </h1>
+            </div>
+        </div>
+        <div class="sf">
+            <div class="sf12">
+                <button class="sf_buttom blue"> cart <span class="sf_badge white">2</span> </button>
+                <button class="sf_buttom dark-gray"> messages <span class="sf_badge white">12</span> </button>
+                <button class="sf_buttom danger"> likes <span class="sf_badge white">34</span> </button>
+            </div>
+        </div>
+        <br>
+
+        <div class="sf">
+            <div class="sf12">
+                <h1><i class="material-icons"> last_page </i> breadcrumb</h1>
+            </div>
+        </div>
+        <div class="sf">
+            <div class="sf12">
+                <nav class="sf_breadcrumb">
+                    <ul>
+                        <li>Music</li>
+                        <li>Rock</li>
+                        <li>Wolves At The Gate</li>
+                        <li>Heralds</li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+        <br>
+
+        <div class="sf">
+            <div class="sf12">
                 <h1><i class="material-icons"> last_page </i> layout</h1>
             </div>
         </div>
@@ -196,7 +229,7 @@
 
         <div class="sf">
             <div class="sf12">
-                <h1><i class="material-icons"> feature </i>soft paddings</h1>
+                <h1><i class="material-icons"> pause </i>soft paddings</h1>
             </div>
         </div>
         <div class="sf">
@@ -226,9 +259,14 @@
                 </p>
             </div>
         </div>
-    
+        <br>
+
         <div class="sf">
-            <!-- modal -->
+            <div class="sf12">
+                <h1><i class="material-icons"> pause </i>modal</h1>
+            </div>
+        </div>
+        <div class="sf">
             <label class="sf_buttom dark-gray" for="modal">Open modal</label>
             <input class="sf_modal_state" id="modal" type="checkbox" hidden>
             <div class="sf_modal">
@@ -242,8 +280,9 @@
                 </div>
             </div>
         </div>
+        <br>
 
-        <div class="sf sf_footer">
+        <footer class="sf sf_footer">
             <div class="sf12">
                 <p> All rights reserved &copy; 2020</p>
                 <p>Powered by 
@@ -252,7 +291,7 @@
                     </strong>
                 </p>
             </div>
-        </div>
+        </footer>
     </div>
 </body>
 
