mel: support breadcrumb, new components and re-design

--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
 
         <div class="sf">
             <div class="sf12">
-                <h1><i class="material-icons"> pause </i>modal</h1>
+                <h1><i class="material-icons"> last_page </i>modal</h1>
             </div>
         </div>
         <div class="sf">
