mel: support breadcrumb, new components and re-design

--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
 
         <div class="sf">
             <div class="sf12">
-                <h1><i class="material-icons"> pause </i>soft paddings</h1>
+                <h1><i class="material-icons"> last_page </i>soft paddings</h1>
             </div>
         </div>
         <div class="sf">
