cor: translate error padding soft

--- a/index.html
+++ b/index.html
@@ -229,13 +229,14 @@
 
         <div class="sf">
             <div class="sf12">
-                <h1><i class="material-icons"> last_page </i>soft paddings</h1>
+                <h1><i class="material-icons"> last_page </i>padding soft</h1>
             </div>
         </div>
         <div class="sf">
             <div class="sf12">
-                <p> Fast expirience with the <strong>soft paddings</strong></p>
-                <p>Using in alls elemens and enjoy.</p>
+                <p>
+                    Are you too lazy to add spaces to your element? <strong>Use padding soft</strong>.
+                </p>
                 <p class="ps5 dark-gray">
                     <span class="light-gray ps2">This is padding with 5px</span>
                 </p>
