--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="sf">
             <div class="sf4">
                 <h1>softframe.css</h1>
-                <p>A simple framework CSS for simples applications.</p>
+                <p>A simple framework CSS for simple applications.</p>
             </div>
             <a class="link-download" href="https://github.com/softframecss/softframecss"> 
                 <span><i class="material-icons text-center">play_for_work</i></span>
