mel: support form

--- a/index.html
+++ b/index.html
@@ -111,40 +111,40 @@
         </div>
         <div class="sf">
             <div class="sf_card sf1">
-                <h3 class="text-center ps5"> .sf1 </h3>
+                <h3 class="text-center ps5"> sf1 </h3>
             </div>
             <div class="sf_card sf1">
-                <h3 class="text-center ps5"> .sf1 </h3>
+                <h3 class="text-center ps5"> sf1 </h3>
             </div>
             <div class="sf_card sf1">
-                <h3 class="text-center ps5"> .sf1 </h3>
+                <h3 class="text-center ps5"> sf1 </h3>
             </div>
             <div class="sf_card sf1">
-                <h3 class="text-center ps5"> .sf1 </h3>
+                <h3 class="text-center ps5"> sf1 </h3>
             </div>
             <div class="sf_card sf1">
-                <h3 class="text-center ps5"> .sf1 </h3>
+                <h3 class="text-center ps5"> sf1 </h3>
             </div>
             <div class="sf_card sf1">
-                <h3 class="text-center ps5"> .sf1 </h3>
+                <h3 class="text-center ps5"> sf1 </h3>
             </div>
             <div class="sf_card sf1">
-                <h3 class="text-center ps5"> .sf1 </h3>
+                <h3 class="text-center ps5"> sf1 </h3>
             </div>
             <div class="sf_card sf1">
-                <h3 class="text-center ps5"> .sf1 </h3>
+                <h3 class="text-center ps5"> sf1 </h3>
             </div>
             <div class="sf_card sf1">
-                <h3 class="text-center ps5"> .sf1 </h3>
+                <h3 class="text-center ps5"> sf1 </h3>
             </div>
             <div class="sf_card sf1">
-                <h3 class="text-center ps5"> .sf1 </h3>
+                <h3 class="text-center ps5"> sf1 </h3>
             </div>
             <div class="sf_card sf1">
-                <h3 class="text-center ps5"> .sf1 </h3>
+                <h3 class="text-center ps5"> sf1 </h3>
             </div>
             <div class="sf_card sf1">
-                <h3 class="text-center ps5"> .sf1 </h3>
+                <h3 class="text-center ps5"> sf1 </h3>
             </div>
         </div>
 
@@ -227,6 +227,62 @@
         </div>
         <br>
 
+        <div class="sf">
+            <div class="sf12">
+                <h1><i class="material-icons"> last_page </i>forms</h1>
+            </div>
+        </div>
+        <div class="sf">
+            <div class="sf12">
+                <form action="" class="sf_form">
+                    <fieldset> 
+                        <legend> fieldset</legend>
+                        <ul>
+                            <li>assigns <strong>sf_input</strong> to each input </li>
+                            <li>each <strong>sf_input</strong> must contain a <strong>label</strong> and an <strong>input</strong></li>
+                            <li>the <strong>inputs</strong> inherit width from <strong>sf_input</strong></li>
+                        </ul>
+                        <div class="sf12_i">
+                            <div class="sf_input sf5_i">
+                                <label for="name">Name</label>
+                                <input type="text" name="name">
+                            </div>
+                            <div class="sf_input sf5_i">
+                                <label for="surname">Surname</label>
+                                <input type="text" name="surname">
+                            </div>
+                            <div class="sf_input sf2_i">
+                                <label for="age">Age</label>
+                                <input type="text" name="age">
+                            </div>
+                        </div>
+                        <div class="sf12_i">
+                            <div class="sf_input sf1_i">
+                                <label for="job">Job</label>
+                                <input type="text" name="job">
+                            </div>
+                            <div class="sf_input sf3_i">
+                                <label for="company">Company</label>
+                                <input type="text" name="company">
+                            </div>
+                            <div class="sf_input sf3_i">
+                                <label for="employee">Employees</label>
+                                <input type="text" name="employee">
+                            </div>
+                            <div class="sf_input sf5_i">
+                                <label for="tags">Tags</label>
+                                <input type="text" name="tags">
+                            </div>
+                        </div>
+                        <div class="sf12_i">
+                            <button class="sf_buttom success">Submit brow</button>
+                        </div>
+                    </fieldset>
+                </form>
+            </div>
+        </div>
+        <br>
+        
         <div class="sf">
             <div class="sf12">
                 <h1><i class="material-icons"> last_page </i>padding soft</h1>
