fix: err in responsive form

--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
         </div>
         <br>
 
-        <div class="sf">
+        <!--<div class="sf">
             <div class="sf12">
                 <h1><i class="material-icons"> last_page </i>forms</h1>
             </div>
@@ -282,7 +282,7 @@
             </div>
         </div>
         <br>
-        
+    -->
         <div class="sf">
             <div class="sf12">
                 <h1><i class="material-icons"> last_page </i>padding soft</h1>
