mel: support CDN :rocket:

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link href="https://fonts.googleapis.com/css?family=Kulim+Park&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="css/softframe.css" rel="stylesheet">
-
+    <link rel="stylesheet" href="https://res.cloudinary.com/dt7h4rpnc/raw/upload/v1577895750/softframe_ecgmzn.css">
     <title>softframe.css | A simple framework CSS for simple applications.</title>
 </head>
 
